--- a/styles/stack-ide-atom.less
+++ b/styles/stack-ide-atom.less
@@ -4,5 +4,8 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.stack-ide-atom {
+atom-text-editor::shadow {
+  .sia-error .region {
+    border: 1px red dashed;
+  }
 }
